--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 name: Release
 on: [ push, pull_request ]
 jobs:
-  build:
-    name: buildAmd64LinuxBundle
+  debian-arm32v7:
+    name: Debian - arm32v7
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -13,16 +13,17 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 10
-      - name: Build AMD64 Linux Bundle
-        run: ./gradlew :repacked-platforms:buildAmd64LinuxBundle -Pversion=9.6.24 -PpgVersion=9.6.24
+      - name: Register QEMU executables
+        run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
+      - name: Build Bundle
+        run: ./gradlew :debian-platforms:buildArm32v7DebianBundle -Pversion=9.6.24 -PpgVersion=9.6.24
       - name: Upload bundle
         uses: actions/upload-artifact@v2
         with:
-          name: buildAmd64LinuxBundle
-          path: repacked-platforms/build/tmp/buildAmd64LinuxBundle/bundle/postgres-linux-x86_64.txz
-  test:
-    name: testAmd64LinuxBundle
-    needs: build
+          name: arm32v7DebianBundle
+          path: debian-platforms/build/tmp/buildArm32v7DebianBundle/bundle/postgres-linux-arm_32.txz
+  debian-arm64v8:
+    name: Debian - arm64v8
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -33,11 +34,249 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 10
-      - name: Download bundle
+      - name: Register QEMU executables
+        run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
+      - name: Build Bundle
+        run: ./gradlew :debian-platforms:buildArm64v8DebianBundle -Pversion=9.6.24 -PpgVersion=9.6.24
+      - name: Upload bundle
+        uses: actions/upload-artifact@v2
+        with:
+          name: arm64v8DebianBundle
+          path: debian-platforms/build/tmp/buildArm64v8DebianBundle/bundle/postgres-linux-arm_64.txz
+  debian-ppc64le:
+    name: Debian - ppc64le
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          ref: master
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 10
+      - name: Register QEMU executables
+        run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
+      - name: Build Bundle
+        run: ./gradlew :debian-platforms:buildPpc64leDebianBundle -Pversion=9.6.24 -PpgVersion=9.6.24
+      - name: Upload bundle
+        uses: actions/upload-artifact@v2
+        with:
+          name: ppc64leDebianBundle
+          path: debian-platforms/build/tmp/buildPpc64leDebianBundle/bundle/postgres-linux-ppcle_64.txz
+  alpine-arm32v6:
+    name: Alpine Linux - arm32v6
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          ref: master
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 10
+      - name: Register QEMU executables
+        run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
+      - name: Build Bundle
+        run: ./gradlew :alpine-platforms:buildArm32v6AlpineBundle -Pversion=9.6.24 -PpgVersion=9.6.24
+      - name: Upload bundle
+        uses: actions/upload-artifact@v2
+        with:
+          name: arm32v6AlpineBundle
+          path: alpine-platforms/build/tmp/buildArm32v6AlpineBundle/bundle/postgres-linux-arm_32.txz
+  alpine-arm64v8:
+    name: Alpine Linux - arm64v8
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          ref: master
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 10
+      - name: Register QEMU executables
+        run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
+      - name: Build Bundle
+        run: ./gradlew :alpine-platforms:buildArm64v8AlpineBundle -Pversion=9.6.24 -PpgVersion=9.6.24
+      - name: Upload bundle
+        uses: actions/upload-artifact@v2
+        with:
+          name: arm64v8AlpineBundle
+          path: alpine-platforms/build/tmp/buildArm64v8AlpineBundle/bundle/postgres-linux-arm_64.txz
+  alpine-ppc64le:
+    name: Alpine Linux - ppc64le
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          ref: master
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 10
+      - name: Register QEMU executables
+        run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
+      - name: Build Bundle
+        run: ./gradlew :alpine-platforms:buildPpc64leAlpineBundle -Pversion=9.6.24 -PpgVersion=9.6.24
+      - name: Upload bundle
+        uses: actions/upload-artifact@v2
+        with:
+          name: ppc64leAlpineBundle
+          path: alpine-platforms/build/tmp/buildPpc64leAlpineBundle/bundle/postgres-linux-ppcle_64.txz
+  alpine-lite-arm32v6:
+    name: Alpine Linux - arm32v6 - lite
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          ref: master
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 10
+      - name: Register QEMU executables
+        run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
+      - name: Build Bundle
+        run: ./gradlew :alpine-lite-platforms:buildArm32v6AlpineLiteBundle -Pversion=9.6.24 -PpgVersion=9.6.24
+      - name: Upload bundle
+        uses: actions/upload-artifact@v2
+        with:
+          name: arm32v6AlpineLiteBundle
+          path: alpine-lite-platforms/build/tmp/buildArm32v6AlpineLiteBundle/bundle/postgres-linux-arm_32.txz
+  alpine-lite-arm64v8:
+    name: Alpine Linux - arm64v8 - lite
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          ref: master
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 10
+      - name: Register QEMU executables
+        run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
+      - name: Build Bundle
+        run: ./gradlew :alpine-lite-platforms:buildArm64v8AlpineLiteBundle -Pversion=9.6.24 -PpgVersion=9.6.24
+      - name: Upload bundle
+        uses: actions/upload-artifact@v2
+        with:
+          name: arm64v8AlpineLiteBundle
+          path: alpine-lite-platforms/build/tmp/buildArm64v8AlpineLiteBundle/bundle/postgres-linux-arm_64.txz
+  alpine-lite-ppc64le:
+    name: Alpine Linux - ppc64le - lite
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          ref: master
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 10
+      - name: Register QEMU executables
+        run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
+      - name: Build Bundle
+        run: ./gradlew :alpine-lite-platforms:buildPpc64leAlpineLiteBundle -Pversion=9.6.24 -PpgVersion=9.6.24
+      - name: Upload bundle
+        uses: actions/upload-artifact@v2
+        with:
+          name: ppc64leAlpineLiteBundle
+          path: alpine-lite-platforms/build/tmp/buildPpc64leAlpineLiteBundle/bundle/postgres-linux-ppcle_64.txz
+  release:
+    name: Collect & Release
+    needs: [debian-arm32v7, debian-arm64v8, debian-ppc64le, alpine-arm32v6, alpine-arm64v8, alpine-ppc64le, alpine-lite-arm32v6, alpine-lite-arm64v8, alpine-lite-ppc64le]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          ref: master
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 10
+      - name: Prepare signing certificate
+        env:
+          SIGNING_CERT: ${{ secrets.SIGNING_CERT }}
+        run: echo -n $SIGNING_CERT | base64 --decode > $RUNNER_TEMP/secring.gpg
+      - name: Download bundle - arm32v7Debian
         uses: actions/download-artifact@v2
         with:
-          name: buildAmd64LinuxBundle
-          path: repacked-platforms/build/tmp/buildAmd64LinuxBundle/bundle
-      - run: ls -alh /home/runner/work/embedded-postgres-binaries/embedded-postgres-binaries/repacked-platforms/build/tmp/buildAmd64LinuxBundle/bundle
-      - name: Test AMD64 Linux Bundle
-        run: ./gradlew :repacked-platforms:testAmd64LinuxJar --info -x buildAmd64LinuxBundle -Pversion=9.6.24 -PpgVersion=9.6.24
+          name: arm32v7DebianBundle
+          path: debian-platforms/build/tmp/buildArm32v7DebianBundle/bundle
+      - name: Download bundle - arm64v8Debian
+        uses: actions/download-artifact@v2
+        with:
+          name: arm64v8DebianBundle
+          path: debian-platforms/build/tmp/buildArm64v8DebianBundle/bundle
+      - name: Download bundle - ppc64leDebian
+        uses: actions/download-artifact@v2
+        with:
+          name: ppc64leDebianBundle
+          path: debian-platforms/build/tmp/buildPpc64leDebianBundle/bundle
+      - name: Download bundle - arm32v6Alpine
+        uses: actions/download-artifact@v2
+        with:
+          name: arm32v6AlpineBundle
+          path: alpine-platforms/build/tmp/buildArm32v6AlpineBundle/bundle
+      - name: Download bundle - arm64v8Alpine
+        uses: actions/download-artifact@v2
+        with:
+          name: arm64v8AlpineBundle
+          path: alpine-platforms/build/tmp/buildArm64v8AlpineBundle/bundle
+      - name: Download bundle - ppc64leAlpine
+        uses: actions/download-artifact@v2
+        with:
+          name: ppc64leAlpineBundle
+          path: alpine-platforms/build/tmp/buildPpc64leAlpineBundle/bundle
+      - name: Download bundle - arm32v6AlpineLite
+        uses: actions/download-artifact@v2
+        with:
+          name: arm32v6AlpineLiteBundle
+          path: alpine-lite-platforms/build/tmp/buildArm32v6AlpineLiteBundle/bundle
+      - name: Download bundle - arm64v8AlpineLite
+        uses: actions/download-artifact@v2
+        with:
+          name: arm64v8AlpineLiteBundle
+          path: alpine-lite-platforms/build/tmp/buildArm64v8AlpineLiteBundle/bundle
+      - name: Download bundle - ppc64leAlpineLite
+        uses: actions/download-artifact@v2
+        with:
+          name: ppc64leAlpineLiteBundle
+          path: alpine-lite-platforms/build/tmp/buildPpc64leAlpineLiteBundle/bundle
+      - name: Release with Gradle
+        env:
+          POSTGRES_VERSION: 9.6.24
+          RELEASE_VERSION: 9.6.24
+          MAVEN_USER: ${{ secrets.MAVEN_USER }}
+          MAVEN_PASS: ${{ secrets.MAVEN_PASS }}
+          SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
+          SIGNING_PASS: ${{ secrets.SIGNING_PASS }}
+        run: |
+          ./gradlew uploadArchives --info \
+            -x buildArm32v7DebianBundle \
+            -x buildArm64v8DebianBundle \
+            -x buildPpc64leDebianBundle \
+            -x buildArm32v6AlpineBundle \
+            -x buildArm64v8AlpineBundle \
+            -x buildPpc64leAlpineBundle \
+            -x buildArm32v6AlpineLiteBundle \
+            -x buildArm64v8AlpineLiteBundle \
+            -x buildPpc64leAlpineLiteBundle \
+            -Pversion=$RELEASE_VERSION \
+            -PpgVersion=$POSTGRES_VERSION \
+            -Possrh.username=$MAVEN_USER \
+            -Possrh.password=$MAVEN_PASS \
+            -Psigning.keyId=$SIGNING_KEY_ID \
+            -Psigning.password=$SIGNING_PASS \
+            -Psigning.secretKeyRingFile=$RUNNER_TEMP/secring.gpg
+      - name: Clean up signing certificate
+        run: rm -rf $RUNNER_TEMP/secring.gpg
