--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgres: [14.1, 13.5, 12.9, 11.14, 10.19, 9.6.24]
+        postgres: [14.2, 13.6, 12.10, 11.15, 10.20]
     steps:
       - name: Checkout project
         uses: actions/checkout@v2
@@ -34,7 +34,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgres: [14.1, 13.5, 12.9, 11.14, 10.19, 9.6.24]
+        postgres: [14.2, 13.6, 12.10, 11.15, 10.20]
     steps:
       - name: Checkout project
         uses: actions/checkout@v2
@@ -56,7 +56,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgres: [14.1, 13.5, 12.9, 11.14, 10.19, 9.6.24]
+        postgres: [14.2, 13.6, 12.10, 11.15, 10.20]
     steps:
       - name: Checkout project
         uses: actions/checkout@v2
@@ -74,7 +74,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgres: [14.1, 13.5, 12.9, 11.14, 10.19, 9.6.24]
+        postgres: [14.2, 13.6, 12.10, 11.15, 10.20]
     steps:
       - name: Checkout project
         uses: actions/checkout@v2
