--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgres: [15.1, 14.6, 13.9, 12.13, 11.18, 10.23]
+        postgres: [15.2, 14.7, 13.10, 12.14, 11.19]
     steps:
       - name: Checkout project
         uses: actions/checkout@v3
@@ -34,7 +34,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgres: [15.1, 14.6, 13.9, 12.13, 11.18, 10.23]
+        postgres: [15.2, 14.7, 13.10, 12.14, 11.19]
     steps:
       - name: Checkout project
         uses: actions/checkout@v3
@@ -56,7 +56,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgres: [15.1, 14.6, 13.9, 12.13, 11.18, 10.23]
+        postgres: [15.2, 14.7, 13.10, 12.14, 11.19]
     steps:
       - name: Checkout project
         uses: actions/checkout@v3
@@ -74,7 +74,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgres: [15.1, 14.6, 13.9, 12.13, 11.18, 10.23]
+        postgres: [15.2, 14.7, 13.10, 12.14, 11.19]
     steps:
       - name: Checkout project
         uses: actions/checkout@v3
