--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgres: [16.1, 15.5, 14.10, 13.13, 12.17, 11.22]
+        postgres: ["16.1", "15.5", "14.10", "13.13", "12.17", "11.22"]
     steps:
       - name: Checkout project
         uses: actions/checkout@v3
@@ -34,7 +34,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgres: [16.1, 15.5, 14.10, 13.13, 12.17, 11.22]
+        postgres: ["16.1", "15.5", "14.10", "13.13", "12.17", "11.22"]
     steps:
       - name: Checkout project
         uses: actions/checkout@v3
@@ -56,7 +56,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgres: [16.1, 15.5, 14.10, 13.13, 12.17, 11.22]
+        postgres: ["16.1", "15.5", "14.10", "13.13", "12.17", "11.22"]
     steps:
       - name: Checkout project
         uses: actions/checkout@v3
@@ -74,7 +74,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgres: [16.1, 15.5, 14.10, 13.13, 12.17, 11.22]
+        postgres: ["16.1", "15.5", "14.10", "13.13", "12.17", "11.22"]
     steps:
       - name: Checkout project
         uses: actions/checkout@v3
