--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ ext {
     qemuPathParam = project.findProperty('qemuPath') ?: ''
 
     pgMajorVersionParam = (pgVersionParam =~ /(\d+).+/).with { matches() ? it[0][1].toInteger() : null }
+    pgMinorVersionParam = (pgVersionParam =~ /\d+\.(\d+).*/).with { matches() ? it[0][1].toInteger() : null }
 }
 
 allprojects {
@@ -74,16 +75,21 @@ def repackedPlatforms = [
    ['name':'windows', 'arch':'amd64']
 ]
 
-def repackWindows = [
-    ['name':'windows', 'arch':'amd64']
-]
+if (pgMajorVersionParam > 14
+        || (pgMajorVersionParam == 14 && pgMinorVersionParam >= 1)
+        || (pgMajorVersionParam == 13 && pgMinorVersionParam >= 5)
+        || (pgMajorVersionParam == 12 && pgMinorVersionParam >= 9)
+        || (pgMajorVersionParam == 11 && pgMinorVersionParam >= 14)
+        || (pgMajorVersionParam == 10 && pgMinorVersionParam >= 19)) {
+    repackedPlatforms << ['name':'darwin', 'arch':'arm64v8']
+}
 
-def repackDarwin = [
-        ['name':'darwin', 'arch':'amd64'],
-]
-
-if (pgMajorVersionParam < 12) {
-    throw new GradleException("Postgres major versions must be 12 or above to support TimescaleDB")
+if (pgMajorVersionParam < 11) {
+    repackedPlatforms << ['name':'windows', 'arch':'i386']
+    if (pgVersionParam != '9.5.19') {
+        repackedPlatforms << ['name':'linux', 'arch':'i386']
+        repackedPlatforms << ['name':'linux', 'arch':'amd64']
+    }
 }
 
 def debianPlatforms = [
