--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgres: [15.4, 14.9, 13.12, 12.16, 11.21]
+        postgres: ["16.0", 15.4, 14.9, 13.12, 12.16, 11.21]
     steps:
       - name: Checkout project
         uses: actions/checkout@v3
@@ -34,7 +34,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgres: [15.4, 14.9, 13.12, 12.16, 11.21]
+        postgres: ["16.0", 15.4, 14.9, 13.12, 12.16, 11.21]
     steps:
       - name: Checkout project
         uses: actions/checkout@v3
@@ -47,7 +47,7 @@ jobs:
         run: ./gradlew :alpine-platforms:testAmd64AlpineJar -Pversion=${{ matrix.postgres }}-TEST -PpgVersion=${{ matrix.postgres }}
         timeout-minutes: 10
       - name: Test PostgreSQL bundle (lite)
-        if: ${{ !(startsWith(matrix.postgres, '9.')) }}
+        if: ${{ !(startsWith(matrix.postgres, '9.')) && !(startsWith(matrix.postgres, '16.')) }}
         run: ./gradlew :alpine-lite-platforms:testAmd64AlpineLiteJar -Pversion=${{ matrix.postgres }}-TEST -PpgVersion=${{ matrix.postgres }}
         timeout-minutes: 10
   macos:
@@ -56,7 +56,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgres: [15.4, 14.9, 13.12, 12.16, 11.21]
+        postgres: ["16.0", 15.4, 14.9, 13.12, 12.16, 11.21]
     steps:
       - name: Checkout project
         uses: actions/checkout@v3
@@ -74,7 +74,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgres: [15.4, 14.9, 13.12, 12.16, 11.21]
+        postgres: ["16.0", 15.4, 14.9, 13.12, 12.16, 11.21]
     steps:
       - name: Checkout project
         uses: actions/checkout@v3
