--- a/build.gradle
+++ b/build.gradle
@@ -99,8 +99,8 @@ def alpinePlatforms = [
 ]
 
 def alpineVariants = [
-        ['name':'', 'opt':'', 'enabled': true]
-//         ['name':'lite', 'opt':'-l', 'enabled': pgMajorVersionParam >= 10]
+        ['name':'', 'opt':'', 'enabled': true],
+        ['name':'lite', 'opt':'-l', 'enabled': pgMajorVersionParam >= 10 && pgMajorVersionParam < 16]
 ]
 
 project(':repacked-platforms') {
