--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgres: ["16.4", "15.8", "14.13", "13.16", "12.20"]
+        postgres: ["17.0", "16.4", "15.8", "14.13", "13.16", "12.20"]
     steps:
       - name: Checkout project
         uses: actions/checkout@v3
@@ -34,7 +34,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgres: ["16.4", "15.8", "14.13", "13.16", "12.20"]
+        postgres: ["17.0", "16.4", "15.8", "14.13", "13.16", "12.20"]
     steps:
       - name: Checkout project
         uses: actions/checkout@v3
@@ -47,7 +47,7 @@ jobs:
         run: ./gradlew :alpine-platforms:testAmd64AlpineJar -Pversion=${{ matrix.postgres }}-TEST -PpgVersion=${{ matrix.postgres }}
         timeout-minutes: 10
       - name: Test PostgreSQL bundle (lite)
-        if: ${{ !(startsWith(matrix.postgres, '9.')) && !(startsWith(matrix.postgres, '16.')) }}
+        if: ${{ startsWith(matrix.postgres, '10.') || startsWith(matrix.postgres, '11.') || startsWith(matrix.postgres, '12.') || startsWith(matrix.postgres, '13.') || startsWith(matrix.postgres, '14.') || startsWith(matrix.postgres, '15.') }}
         run: ./gradlew :alpine-lite-platforms:testAmd64AlpineLiteJar -Pversion=${{ matrix.postgres }}-TEST -PpgVersion=${{ matrix.postgres }}
         timeout-minutes: 10
   macos:
@@ -56,7 +56,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgres: ["16.4", "15.8", "14.13", "13.16", "12.20"]
+        postgres: ["17.0", "16.4", "15.8", "14.13", "13.16", "12.20"]
     steps:
       - name: Checkout project
         uses: actions/checkout@v3
@@ -78,7 +78,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        postgres: ["16.4", "15.8", "14.13", "13.16", "12.20"]
+        postgres: ["17.0", "16.4", "15.8", "14.13", "13.16", "12.20"]
     steps:
       - name: Checkout project
         uses: actions/checkout@v3
