--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
           java-version: 15
       - name: Set environment variables
         env:
-          MILESTONE_VERSION: 16.4
+          MILESTONE_VERSION: "16.4"
         run: |
           echo "RELEASE_VERSION=$MILESTONE_VERSION" >> $GITHUB_ENV
           echo "POSTGRES_VERSION=${MILESTONE_VERSION%.*}" >> $GITHUB_ENV
@@ -49,7 +49,7 @@ jobs:
           java-version: 15
       - name: Set environment variables
         env:
-          MILESTONE_VERSION: 16.4
+          MILESTONE_VERSION: "16.4"
         run: |
           echo "RELEASE_VERSION=$MILESTONE_VERSION" >> $GITHUB_ENV
           echo "POSTGRES_VERSION=${MILESTONE_VERSION%.*}" >> $GITHUB_ENV
@@ -77,7 +77,7 @@ jobs:
           java-version: 15
       - name: Set environment variables
         env:
-          MILESTONE_VERSION: 16.4
+          MILESTONE_VERSION: "16.4"
         run: |
           echo "RELEASE_VERSION=$MILESTONE_VERSION" >> $GITHUB_ENV
           echo "POSTGRES_VERSION=${MILESTONE_VERSION%.*}" >> $GITHUB_ENV
@@ -105,7 +105,7 @@ jobs:
           java-version: 15
       - name: Set environment variables
         env:
-          MILESTONE_VERSION: 16.4
+          MILESTONE_VERSION: "16.4"
         run: |
           echo "RELEASE_VERSION=$MILESTONE_VERSION" >> $GITHUB_ENV
           echo "POSTGRES_VERSION=${MILESTONE_VERSION%.*}" >> $GITHUB_ENV
@@ -133,7 +133,7 @@ jobs:
           java-version: 15
       - name: Set environment variables
         env:
-          MILESTONE_VERSION: 16.4
+          MILESTONE_VERSION: "16.4"
         run: |
           echo "RELEASE_VERSION=$MILESTONE_VERSION" >> $GITHUB_ENV
           echo "POSTGRES_VERSION=${MILESTONE_VERSION%.*}" >> $GITHUB_ENV
@@ -161,7 +161,7 @@ jobs:
           java-version: 15
       - name: Set environment variables
         env:
-          MILESTONE_VERSION: 16.4
+          MILESTONE_VERSION: "16.4"
         run: |
           echo "RELEASE_VERSION=$MILESTONE_VERSION" >> $GITHUB_ENV
           echo "POSTGRES_VERSION=${MILESTONE_VERSION%.*}" >> $GITHUB_ENV
@@ -190,7 +190,7 @@ jobs:
           java-version: 15
       - name: Set environment variables
         env:
-          MILESTONE_VERSION: 16.4
+          MILESTONE_VERSION: "16.4"
         run: |
           echo "RELEASE_VERSION=$MILESTONE_VERSION" >> $GITHUB_ENV
           echo "POSTGRES_VERSION=${MILESTONE_VERSION%.*}" >> $GITHUB_ENV
@@ -219,7 +219,7 @@ jobs:
           java-version: 15
       - name: Set environment variables
         env:
-          MILESTONE_VERSION: 16.4
+          MILESTONE_VERSION: "16.4"
         run: |
           echo "RELEASE_VERSION=$MILESTONE_VERSION" >> $GITHUB_ENV
           echo "POSTGRES_VERSION=${MILESTONE_VERSION%.*}" >> $GITHUB_ENV
@@ -248,7 +248,7 @@ jobs:
           java-version: 15
       - name: Set environment variables
         env:
-          MILESTONE_VERSION: 16.4
+          MILESTONE_VERSION: "16.4"
         run: |
           echo "RELEASE_VERSION=$MILESTONE_VERSION" >> $GITHUB_ENV
           echo "POSTGRES_VERSION=${MILESTONE_VERSION%.*}" >> $GITHUB_ENV
@@ -282,7 +282,7 @@ jobs:
           java-version: 15
       - name: Set environment variables
         env:
-          MILESTONE_VERSION: 16.4
+          MILESTONE_VERSION: "16.4"
         run: |
           echo "RELEASE_VERSION=$MILESTONE_VERSION" >> $GITHUB_ENV
           echo "POSTGRES_VERSION=${MILESTONE_VERSION%.*}" >> $GITHUB_ENV
